PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 7.0.1

- Core:
  . Fixed bug #70944 (try{ } finally{} can create infinite chains of
    exceptions). (Laruence)
  . Fixed bug #70914 (zend_throw_or_error() format string vulnerability).
    (Taoguang Chen)
  . Fixed bug #70912 (Null ptr dereference instantiating class with invalid
    array property). (Laruence)
  . Fixed bug #70898, #70895 (null ptr deref and segfault with crafted callable).
    (Anatol, Laruence)
  . Fixed bug #70899 (buildconf failure in extensions). (Bob, Reeze)

- Mysqlnd:
  . Fixed bug #68077 (LOAD DATA LOCAL INFILE / open_basedir restriction).
    (Laruence)

- OCI8:
  . Fixed LOB implementation size_t/zend_long mismatch reported by gcov. (Senthil)
  . Fixed memory leak with LOBs. (Senthil)

- SOAP:
  . Fixed bug #70900 (SoapClient systematic out of memory error). (Dmitry)
  . Fixed bug #70940 (Segfault in soap / type_to_string). (Remi)

- Standard:
  . Fixed bug #70910 (extract() breaks variable references). (Laruence)

- Streams/Socket
  . Add IPV6_V6ONLY constant / make it usable in stream contexts. (Bob)

12 Nov 2015, PHP 7.0.0 RC 7

- Core:
  . Fixed bug #70249 (Segmentation fault while running PHPUnit tests on
    phpBB 3.2-dev). (Laruence)
  . Fixed bug #70873 (Regression on private static properties access).
    (Laruence)
  . Fixed bug #70805 (Segmentation faults whilst running Drupal 8 test suite).
    (Dmitry, Laruence)
  . Fixed bug #70862 (Several functions do not check return code of
    php_stream_copy_to_mem()). (Anatol)
  . Fixed bug #70863 (Incorect logic to increment_function for proxy objects).
    (Anatol)
  . Fixed bug #70842 (Persistent Stream Segmentation Fault). (Caleb Champlin)
  . Fixed bug #70323 (Regression in zend_fetch_debug_backtrace() can cause
    segfaults). (Aharvey, Laruence)

- Mysqlnd: